# substring-match-rs

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: lib.rs  python.rs  tests.rs
